# ExpertSystem

./: .gitignore  CMakeLists.txt  ExpertSystem.qmlproject  README.md  Tariffs.json  qmlmodules
content/: App.qml  CMakeLists.txt  ScreenExpert.qml
imports/: CMakeLists.txt
imports/ExpertSystem/: CMakeLists.txt  Constants.qml  qmldir
imports/ExpertSystem/designer/: plugin.metainfo
src/: backend.cpp  backend.h  import_qml_plugins.h  main.cpp  tarif.cpp  tarif.h
